@startuml

class Collaborator {
  -String name
  -String email
  Colaborador(String name, String email, String password )
}

class Manager {
  -String name
  -String email
  Manager(String name, String email, String password)
}

class Administrator {
- String name
- String email
- String password
}

class Organization {
  -String name
  -String IBAN
  +Organizacao(name, iban, manager ,collaborator)
  {static} Manager newManager(name, email, password)
  {static} Colaborador newColaborador(name, email, password)
}

class App {

  + RegistOrganization getRegistOrganization()
  + AutorizacaoFacade getAutorizacaoFacade()
}

class RegistOrganization {
  +Organization newOrganizacao(String iban, String name, Manager manager, Collaborator collaborator)
  +validatesOrganization(Organization org)
  +registOrganization(Organizacao org)
  -addOrganization(Organizacao org))
}

class AuthorizationFacade {
   - registerUser(User utlz)
}

class CreateOrganizationController {
    newOrganization(newOrganization(String iban, String name, String nameM, String strEmailM, String nameC, String strEmailC) 
   - addOrganizaton()
}

class CreateOrganizationUI {
}

CreateOrganizationUI ..> CreateOrganizationController
CreateOrganizationController ..> RegistOrganization
CreateOrganizationController ..> App
CreateOrganizationController ..> Organization
RegistOrganization"1" --> "*" Organization : has registed
RegistOrganization ..> Collaborator
RegistOrganization ..> Manager
RegistOrganization ..> AutorizacaoFacade

Organization                 "1" -- "1,..."  Collaborator    : has >
Organization                 "1" -- "1"      Manager        : has >
Administrator                "1" -- "*"      Organization   : adds >
App                          "1" -- "*"      Administrator  : has >

@enduml
